// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HNClient /> should render with correct props 1`] = `
<styled.main
  rows={0}
>
  <Connect(Component) />
</styled.main>
`;

exports[`<HNClient /> should render with correct props 2`] = `
<styled.main
  rows={2}
>
  <Connect(Component) />
  <p
    key="123456"
  >
    Test
  </p>
  <p
    key="234567"
  >
    Test 2
  </p>
</styled.main>
`;
